[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The Hypermodern Python project"
license = "MIT"
readme = "README.md"
authors = ["Dmitry Kabanov <kabanov.dmitry@gmail.com>"]
homepage = "https://github.com/dmitry-kabanov/hypermodern-python"
repository = "https://github.com/dmitry-kabanov/hypermodern-python"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
